added links to footer

--- a/index.html
+++ b/index.html
@@ -288,15 +288,26 @@
       >
       <ul class="social-list">
         <li class="social-list__item">
-          <a href="" class="social-list__link"
+          <a
+            href="https://www.linkedin.com/in/fredrikridderfalk/"
+            class="social-list__link"
+            target="_blank"
             ><i class="fab fa-linkedin-in"></i
           ></a>
         </li>
         <li class="social-list__item">
-          <a href="" class="social-list__link"><i class="fab fa-github"></i></a>
+          <a
+            href="https://github.com/FredrikRidderfalk"
+            class="social-list__link"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
         </li>
         <li class="social-list__item">
-          <a href="" class="social-list__link"
+          <a
+            href="https://twitter.com/Ridderfalk"
+            class="social-list__link"
+            target="_blank"
             ><i class="fab fa-twitter"></i
           ></a>
         </li>
