updated portfolio images

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div>
         <a href="#" class="portfolio__item portfolio__item-7">
           <img
-            src="img/portfolio-07.jpg"
+            src="img/food_blog.png"
             alt=""
             class="portfolio__img portfolio__img-7"
           />
@@ -273,7 +273,7 @@
         </div>
         <a href="#" class="portfolio__item portfolio__item-8">
           <img
-            src="img/portfolio-08.jpg"
+            src="img/netflix_clone.png"
             alt=""
             class="portfolio__img portfolio__img-8"
           />
