added chrome extension text and image

--- a/index.html
+++ b/index.html
@@ -164,10 +164,14 @@
         <div class="portfolio__text portfolio__text-2">
           <h3 class="portfolio__subtitle">Chrome Extension</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
+            Full stack project. An extension built from scratch and deployed to
+            the Chrome browser.
+          </p>
+          <p>
+            Bookmarks and displays any links by input, and can also with a
+            single click save the link for the current tab in focus. This is a
+            great way to save recipes found in the wild wild web, and separate
+            them from an already cluttered Chrome bookmarks folder.
           </p>
         </div>
         <a
@@ -175,7 +179,7 @@
           class="portfolio__item portfolio__item-2"
         >
           <img
-            src="img/portfolio-02.jpg"
+            src="img/chrome_extension_1.png"
             alt=""
             class="portfolio__img portfolio__img-2"
           />
