updated paragraphs throughout site

--- a/index.html
+++ b/index.html
@@ -67,32 +67,34 @@
       </div>
       <div class="services">
         <div class="service">
-          <h3>Design + Development</h3>
+          <h3>Front-End Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-            maiores vel repellendus quia aut, nihil a eveniet numquam officiis
-            laboriosam blanditiis, consectetur obcaecati quos consequatur
-            tempora cumque! Voluptatum, amet nulla!
+            I produce responsive websites and web apps that provide users the
+            best and most appropriate experience suited to their device and
+            browser. I particularly like working on websites that have seamless
+            transitions and require high-level performance to maintain an
+            appealing website.
           </p>
         </div>
 
         <div class="service">
-          <h3>Landing Pages</h3>
+          <h3>UX/UI Design</h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis
-            eius eligendi recusandae quis porro, reprehenderit veniam laudantium
-            dolorum distinctio, ex eos in. Sed velit alias quibusdam, mollitia
-            culpa nihil quod.
+            I believe it is important to understand both design and development
+            to achieve a successful user-facing product. I enjoy the iterative
+            process and to frequently reach out to gather user and stakeholder
+            feedback. I plan all my work according to web content accessibility
+            guidelines.
           </p>
         </div>
 
         <div class="service">
-          <h3>Browser Extensions</h3>
+          <h3>Mobile Development</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            facere fuga, architecto consectetur ipsa repellendus exercitationem
-            soluta debitis illum tempore esse natus! Similique a temporibus
-            animi eius, in natus nihil.
+            I have experience building for both iOS and Android using React
+            Native and prototyping using Figma. I can use the Admob platform for
+            monetization by implementing a variety of ads. Check out my
+            portfolio to see my latest collaborative project.
           </p>
         </div>
       </div>
@@ -108,23 +110,31 @@
       </p>
 
       <div class="about-me__body">
-        <span
-          class="txt-rotate"
-          data-period="2000"
-          data-rotate='[ "Hi.", "Hej.", "Merhaba.", "Aloha.", "Annyeonghaseyo.", "Hola." ]'
-        ></span>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-          necessitatibus laborum unde, itaque ducimus recusandae amet voluptas
-          officia ratione deleniti assumenda. Aperiam cumque illo laborum neque,
-          voluptatibus blanditiis nisi enim?
+          I am a
+          <span
+            class="txt-rotate"
+            data-period="2000"
+            data-rotate='[ "developer.", "scientist.", "high-school teacher.", "foodie.", "content creator.", "nerd.", "cat dad of three" ]'
+          ></span>
         </p>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid vitae
-          a odio nisi optio, quis asperiores, saepe sapiente labore harum
-          recusandae consequatur sed. Aut nostrum magni deleniti consequatur
-          laboriosam in! &lt;div&gt; Lorem ipsum dolor sit amet consectetur
-          adipisicing elit.
+          I became a molecular biologist, and conducted cancer research using
+          immunotherapy, worked on developing 3D-printed human organs, and I
+          collaborated on bringing genetically engineered wheat crops to farmers
+          in Bangladesh that can withstand dire environmental stresses due to
+          climate change. I then brought my passion for science into the
+          high-school classroom. As the pandemic struck, I put the teaching on
+          hold and became a self-taught developer. I have worn many hats and
+          bring with me a wide set of knowledge and experience from my different
+          professional odysseys.
+        </p>
+        <p>
+          My main experience is in front-end development but I also have a
+          passion for design. I believe having experience in both design and
+          development allows for making the most optimal user experiences. I
+          love to code things from scratch, and enjoy bringing ideas to life in
+          the browser.
         </p>
       </div>
 
@@ -143,11 +153,26 @@
         <div class="portfolio__text portfolio__text-1">
           <h3 class="portfolio__subtitle">Padel Scorekeeping App</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
+            Collaborative project. Mobile app developed for both iOS and
+            Android. Designed and prototyped using Figma and built using React
+            Native. Deployed on Apple App Store and Google Play.
           </p>
+          <p>
+            Keep track of the score of your padel matches with this streamlined
+            and easy to use padel scorekeeping app.
+          </p>
+          <p>Features:</p>
+          <ul>
+            <li>Swipe ↑/↓ for point scoring</li>
+            <li>Supports best of 1, 3, or 5 sets</li>
+            <li>Play with tie-break ruleset</li>
+            <li>Dynamic indicator for serving team</li>
+            <li>Ability to undo points</li>
+            <li>Reset the match at any time</li>
+            <li>Haptic feedback for scoring</li>
+          </ul>
+          <p>PadelMate for ⌚️iWatch coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a
           href="https://github.com/HannahSchafer/PadelScoreKeeper"
@@ -189,11 +214,21 @@
         <div class="portfolio__text portfolio__text-3">
           <h3 class="portfolio__subtitle">Blackjack Game</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
+            Developed with CSS/JavaScript. The classic game of Blackjack.
+            featuring an engaging layout, responsive updates from the Blackjack
+            dealer, your name and remaining bankroll, .
           </p>
+          <p>Features:</p>
+          <ul>
+            <li>An engaging layout</li>
+            <li>Responsive updates from the Blackjack dealer</li>
+            <li>Your name and remaining bankroll</li>
+            <li>A start button dealing the user two cards</li>
+            <li>Ability to ask for another card to be dealt</li>
+            <li>The NEW CARD button disables at game over</li>
+          </ul>
+          <p>Tooltip showing rulset coming soon!</p>
+          <p class="typing-loader"></p>
         </div>
         <a
           href="https://github.com/FredrikRidderfalk/blackjack"
@@ -210,10 +245,9 @@
         <div class="portfolio__text portfolio__text-4">
           <h3 class="portfolio__subtitle">Passenger Counter</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
-            aperiam animi ea fugiat at atque, rem error temporibus voluptate
-            cumque veritatis? Incidunt aliquid consectetur eum nostrum et hic
-            nemo reiciendis.
+            Developed with JavaScript. A streamlined counting app featuring a
+            counter, an increment button, and a save button that logs the
+            counted number to an array.
           </p>
         </div>
         <a
