gave portfolio_items target="_blank"

--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
         <a
           href="https://github.com/HannahSchafer/PadelScoreKeeper"
           class="portfolio__item portfolio__item-1"
+          target="_blank"
         >
           <img
             src="img/padelmate_mockup.png"
@@ -202,6 +203,7 @@
         <a
           href="https://github.com/FredrikRidderfalk/chrome_recipes_extension"
           class="portfolio__item portfolio__item-2"
+          target="_blank"
         >
           <img
             src="img/chrome_extension_1.png"
@@ -233,6 +235,7 @@
         <a
           href="https://github.com/FredrikRidderfalk/blackjack"
           class="portfolio__item portfolio__item-3"
+          target="_blank"
         >
           <img
             src="img/portfolio-03.jpg"
@@ -253,6 +256,7 @@
         <a
           href="https://github.com/FredrikRidderfalk/passenger_counting_app"
           class="portfolio__item portfolio__item-4"
+          target="_blank"
         >
           <img
             src="img/portfolio-04.jpg"
@@ -267,7 +271,7 @@
           <p>Coming soon!</p>
           <p class="typing-loader"></p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-5">
+        <a href="#" class="portfolio__item portfolio__item-5" target="_blank">
           <img
             src="img/portfolio-05.jpg"
             alt=""
@@ -281,7 +285,7 @@
           <p>Coming soon!</p>
           <p class="typing-loader"></p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-6">
+        <a href="#" class="portfolio__item portfolio__item-6" target="_blank">
           <img
             src="img/portfolio-06.jpg"
             alt=""
@@ -295,7 +299,7 @@
           <p>Coming soon!</p>
           <p class="typing-loader"></p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-7">
+        <a href="#" class="portfolio__item portfolio__item-7" target="_blank">
           <img
             src="img/food_blog.png"
             alt=""
@@ -309,7 +313,7 @@
           <p>Coming soon!</p>
           <p class="typing-loader"></p>
         </div>
-        <a href="#" class="portfolio__item portfolio__item-8">
+        <a href="#" class="portfolio__item portfolio__item-8" target="_blank">
           <img
             src="img/netflix_clone.png"
             alt=""
