updated typewriter carousel

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <span
             class="txt-rotate"
             data-period="2000"
-            data-rotate='[ "developer.", "scientist.", "high-school teacher.", "foodie.", "content creator.", "nerd.", "cat dad of three" ]'
+            data-rotate='[ "developer.", "scientist.", "high-school teacher.", "foodie.", "content creator.", "nerd.", "cat dad of three." ]'
           ></span>
         </p>
         <p>
