minor change to test github pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <h1 class="section__title section__title--intro">
         Hi, I am <strong>Fredrik Ridderfalk</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+      <p class="section__subtitle section__subtitle--intro">
+        I love you habibi
+      </p>
       <img
         src="img/dev-fredrik-01.png"
         alt="a picture of Fredrik Ridderfalk smiling"
