updated portfolio images

--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
       <h1 class="section__title section__title--intro">
         Hi, I am <strong>Fredrik Ridderfalk</strong>
       </h1>
-      <p class="section__subtitle section__subtitle--intro">
-        I love you habibi
-      </p>
+      <p class="section__subtitle section__subtitle--intro">front-end dev</p>
       <img
         src="img/dev-fredrik-01.png"
         alt="a picture of Fredrik Ridderfalk smiling"
@@ -240,7 +238,7 @@
           target="_blank"
         >
           <img
-            src="img/portfolio-03.jpg"
+            src="img/blackjack.png"
             alt=""
             class="portfolio__img portfolio__img-3"
           />
@@ -261,7 +259,7 @@
           target="_blank"
         >
           <img
-            src="img/portfolio-04.jpg"
+            src="img/passenger_counter.png"
             alt=""
             class="portfolio__img portfolio__img-4"
           />
