--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="services">
         <div class="service">
           <h3>Front-End Development</h3>
-          <p>
+          <p class="service__text">
             I produce responsive websites and web apps that provide users the
             best and most appropriate experience suited to their device and
             browser. I particularly like working on websites that have seamless
@@ -79,7 +79,7 @@
 
         <div class="service">
           <h3>UX/UI Design</h3>
-          <p>
+          <p class="service__text">
             I believe it is important to understand both design and development
             to achieve a successful user-facing product. I enjoy the iterative
             process and to frequently reach out to gather user and stakeholder
@@ -90,10 +90,10 @@
 
         <div class="service">
           <h3>Mobile Development</h3>
-          <p>
+          <p class="service__text">
             I have experience building for both iOS and Android using React
-            Native and prototyping using Figma. I can use the Admob platform for
-            monetization by implementing a variety of ads. Check out my
+            Native and prototyping using Figma. I have used the Admob platform
+            for monetization by implementing a variety of ads. Check out my
             portfolio to see my latest collaborative project.
           </p>
         </div>
@@ -106,7 +106,7 @@
     <section class="about-me" id="about">
       <h2 class="section__title section__title--about">Who I am</h2>
       <p class="section__subtitle section__subtitle--about">
-        Biologist & teacher turned developer
+        Biologist & teacher turned <strong>developer</strong>
       </p>
 
       <div class="about-me__body">
@@ -115,7 +115,7 @@
           <span
             class="txt-rotate"
             data-period="2000"
-            data-rotate='[ "developer.", "scientist.", "high-school teacher.", "foodie.", "content creator.", "nerd.", "cat dad of three." ]'
+            data-rotate='[ "developer.", "scientist.", "high-school teacher.", "foodie.", "content creator.", "cat dad of three." ]'
           ></span>
         </p>
         <p>
@@ -124,10 +124,12 @@
           collaborated on bringing genetically engineered wheat crops to farmers
           in Bangladesh that can withstand dire environmental stresses due to
           climate change. I then brought my passion for science into the
-          high-school classroom. As the pandemic struck, I put the teaching on
-          hold and became a self-taught developer. I have worn many hats and
-          bring with me a wide set of knowledge and experience from my different
-          professional odysseys.
+          high-school classroom. I have eagerly pioneered the use of digital
+          learning technologies in my classrooms to increase student engagement.
+          As the pandemic struck, I put the teaching on hold and became a
+          self-taught developer, realizing my knack for problem-solving in the
+          digital space. I have worn many hats and bring with me a wide set of
+          knowledge and experience from my different professional odysseys.
         </p>
         <p>
           My main experience is in front-end development but I also have a
@@ -190,8 +192,7 @@
         <div class="portfolio__text portfolio__text-2">
           <h3 class="portfolio__subtitle">Chrome Extension</h3>
           <p>
-            Full stack project. An extension built from scratch and deployed to
-            the Chrome browser.
+            An extension built from scratch and deployed to the Chrome browser.
           </p>
           <p>
             Bookmarks and displays any links by input, and can also with a
