added portfolio item

--- a/index.html
+++ b/index.html
@@ -268,13 +268,16 @@
 
         <!-- Portfolio item 5 -->
         <div class="portfolio__text portfolio__text-5">
-          <h3 class="portfolio__subtitle">Magic 8-ball</h3>
-          <p>Coming soon!</p>
-          <p class="typing-loader"></p>
+          <h3 class="portfolio__subtitle">Temperature Converter</h3>
+          <p>
+            A streamlined chrome extension app for converting degrees between
+            Celsius and Fahrenheit. The user receives output with precision of
+            one decimal.
+          </p>
         </div>
         <a href="#" class="portfolio__item portfolio__item-5" target="_blank">
           <img
-            src="img/portfolio-05.jpg"
+            src="img/temperature_converter.png"
             alt=""
             class="portfolio__img portfolio__img-5"
           />
@@ -302,7 +305,7 @@
         </div>
         <a href="#" class="portfolio__item portfolio__item-7" target="_blank">
           <img
-            src="img/food_blog.png"
+            src="img/food_blog.jpg"
             alt=""
             class="portfolio__img portfolio__img-7"
           />
@@ -316,7 +319,7 @@
         </div>
         <a href="#" class="portfolio__item portfolio__item-8" target="_blank">
           <img
-            src="img/netflix_clone.png"
+            src="img/netflix.jpg"
             alt=""
             class="portfolio__img portfolio__img-8"
           />
